--- a/NLayer.API/appsettings.json
+++ b/NLayer.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlConnection": "Data Source=THEWIDMORE;Initial Catalog=UdemyNLayerDb;User ID=sa;Password=56592596.Db; Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "SqlConnection": "Data Source=localhost;Initial Catalog=UdemyNLayerDb;User ID=sa;Password=56592596.Db; Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "Logging": {
     "LogLevel": {
