--- a/NLayer.Service/NLayer.Service.csproj
+++ b/NLayer.Service/NLayer.Service.csproj
@@ -10,4 +10,10 @@
     <ProjectReference Include="..\NLayer.Repository\NLayer.Repository.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
 </Project>
