--- a/NLayer.Service/NLayer.Service.csproj
+++ b/NLayer.Service/NLayer.Service.csproj
@@ -12,8 +12,13 @@
 
   <ItemGroup>
     <None Remove="Services\" />
+    <None Remove="Mapping\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Services\" />
+    <Folder Include="Mapping\" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
   </ItemGroup>
 </Project>
