--- a/NLayer.API/NLayer.API.csproj
+++ b/NLayer.API/NLayer.API.csproj
@@ -13,6 +13,6 @@
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.2.0" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\NLayer.Service\NLayer.Service.csproj" />
+    <ProjectReference Include="..\NLayer.Caching\NLayer.Caching.csproj" />
   </ItemGroup>
 </Project>
