--- a/NLayer.Web/appsettings.json
+++ b/NLayer.Web/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SqlConnection": "Data Source=localhost;Initial Catalog=UdemyNLayerDb;User ID=sa;Password=56592596.Db; Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
